fix content overflowing.

--- a/assets/less/responsive/mobile/views/profile.less
+++ b/assets/less/responsive/mobile/views/profile.less
@@ -157,6 +157,7 @@
 			article {
 				.column(8,8,left,0);
 				margin-top: 10px;
+				box-sizing: border-box;
 			}
 		}
 		#friends {
